# Parallel_TF-IDF_Classification

./: .gitignore  Doxyfile  LICENSE  Makefile  Parallel-TF-IDF-KELTON.tex  README.md  main
data/: BBC-News-Training.csv  DESCRIPTION  README.md  correct_unknown.txt  unknown_text.txt  unkown_text_unfixed.txt
docs/: Doxyfile
include/: Category.hpp  Corpus.hpp  DESCRIPTION  Document.hpp  Printable.h  README.md  TFIDF-prev.hpp  TFIDF.hpp  categories.h  categories.hpp  computation.hpp  config.h  config.hpp  count_vectorization.h  count_vectorization.hpp  document.h  document.hpp  file_operations-prev.hpp  file_operations.h  file_operations.hpp  flag_handler.hpp  preprocess.h  preprocess.hpp  tfidf.h  tfidf.hpp  threadpool.h  training_vectorizer.hpp  utils.h  utils.hpp
scripts/: .env  README.md  accuracy_grapher.py  all.sh  clean.sh  cleanup.sh  diffy.py  grapher.py  grapher3.0.py  grapher_2.0.py  randomize.py  run.sh  run_threads.sh  setup.sh  speedup.py  speedup_grapher.py  tmp.py
src/: Category.cpp  Corpus.cpp  Document.cpp  README.md  TFIDF-prev.cpp  TFIDF.cpp  categories-prev.cpp  categories.cpp  computation.cpp  count_vectorization.cpp  count_vectorization.h  document.cpp  document.h  file_operations-prev.cpp  file_operations.cpp  main-test-non-optimized-parallel.cpp  main-test-parallel.cpp  main-test-sequential.cpp  main-to-csv-from-txt.cpp  main-txt-to-csv.cpp  main.cpp  main_2.cpp  main_3.cpp  preprocess.cpp  preprocess.h  tfidf.cpp  training_vectorizer.cpp  utils.cpp  vocabulary.h
test/: CMakeLists.txt  README.md
test/test-output/: README.md
(+197 files in other folders)
